--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-    <title>Video Uploader new</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but video-uploader-new doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-  <script>
-    //перевод берется из директив .env до компиляции проджа
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+  <title>Video Uploader new</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but video-uploader-new doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+<script>
+  //перевод берется из директив .env до компиляции проджа
   window.onload = function () {
-  const url_api   = "./index.php"//"http://localhost:3000/backend/index.php"
-  const watch_url = url_api + '?action=watch&dir=watch&v='
-  const gif_url   = url_api + '?action=watch&dir=gif&v='
-  const webp_url  = url_api + '?action=watch&dir=webp&v='
-  const img_url   = url_api + '?action=watch&dir=img&v='
-  const show_menu = false;
-  video_brand_img_title = 'APCIS';
-  video_brand_click_msg = 'Brand click';//Введи сюда Brand click - чтобы взяло значение из перевода , если не будет перевода, то выведет как есть;
-  video_brand_img_src = ''; //ссылка на значек в плеере
-    initVue ({ url_api, watch_url, gif_url, webp_url, img_url, video_brand_img_title, video_brand_click_msg, video_brand_img_src, show_menu });
-  }
+    const url_api = "./index.php" //"http://localhost:3000/backend/index.php"
+    const watch_url = url_api + '?action=watch&dir=watch&v='
+    const gif_url = url_api + '?action=watch&dir=gif&v='
+    const webp_url = url_api + '?action=watch&dir=webp&v='
+    const img_url = url_api + '?action=watch&dir=img&v='
+    const show_menu = true;
+    video_brand_img_title = 'APCIS';
+    video_brand_click_msg =
+    'Brand click'; //Введи сюда Brand click - чтобы взяло значение из перевода , если не будет перевода, то выведет как есть;
+    video_brand_img_src = ''; //ссылка на значек в плеере
+    const maxSize = 2000 // мегабайты - - размер видео.
+    const maxDuration = 5 // минуты  - - длительность видео.
 
-  </script>
+    initVue({
+      url_api,
+      watch_url,
+      gif_url,
+      webp_url,
+      img_url,
+      video_brand_img_title,
+      video_brand_click_msg,
+      video_brand_img_src,
+      show_menu,
+      maxSize,
+      maxDuration
+    });
+  }
+</script>
+
 </html>
