the title is set at initialization

--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,20 @@
   window.onload = function () {
     canWrite = false
     url_api = "./index.php" //"http://localhost:3000/backend/index.php"
-     watch_url = url_api + '?action=watch&dir=watch&v='
-     gif_url = url_api + '?action=watch&dir=gif&v='
-     webp_url = url_api + '?action=watch&dir=webp&v='
-     img_url = url_api + '?action=watch&dir=img&v='
-     show_menu = false;
+    watch_url = url_api + '?action=watch&dir=watch&v='
+    gif_url = url_api + '?action=watch&dir=gif&v='
+    webp_url = url_api + '?action=watch&dir=webp&v='
+    img_url = url_api + '?action=watch&dir=img&v='
+    show_menu = false;
     video_brand_img_title = 'APCIS';
-    video_brand_click_msg =
-    'Brand click'; //Введи сюда Brand click - чтобы взяло значение из перевода , если не будет перевода, то выведет как есть;
+    video_brand_click_msg = 'Brand click'; //Введи сюда Brand click - чтобы взяло значение из перевода , если не будет перевода, то выведет как есть;
     video_brand_img_src = ''; //ссылка на значек в плеере
-    const maxSize = 2000 // мегабайты - - размер видео.
-    const maxDuration = 10 // минуты  - - длительность видео.
+    maxSize = 100 // мегабайты - - размер видео.
+    maxDuration = 10 // минуты  - - длительность видео.
+    title = "Video Hosting new"
 
     initVue({
+      title,
       canWrite,
       url_api,
       watch_url,
